# payment-api/src/main/resources/payment-openapi-spec-file.yaml
@@ -5,32 +5,23 @@ info:
   description: API for purchasing order and performing transaction
 
 paths:
-  /api/order:
+  /payment-service/api/payment:
     post:
       tags:
-        - Order
-      operationId: perform new order
-      summary: Purchase new order
+        - Payment
+      operationId: perform payment
+      summary: Perform payment transaction
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/OrderRequest'
+              $ref: '#/components/schemas/PaymentRequest'
       responses:
-        '201':
-          description: Purchase Order Sucessfully
-          content:
-            application/json:
-              schema:
-                type: object
-                additionalProperties: false
+        '200':
+          $ref: '#/components/responses/Transaction200Response'
         default:
           $ref: '#/components/responses/GenericDefaultResponse'
-
-
-
-
 
 
 components:
@@ -51,22 +42,24 @@ components:
         - code
         - detail
 
-    OrderRequest:
+    PaymentRequest:
       type: object
       properties:
+        receiptId:
+          type: integer
+          format: int32
         studentId:
           type: integer
           format: int32
         grade:
           type: string
-        feeType:
+        amount:
+          type: number
+          format: double
+        studentName:
           type: string
-        quantity:
-          type: integer
-          format: int32
         cardNumber:
-          type: integer
-          format: int32
+          type: string
         cardType:
           type: string
       required:
@@ -77,15 +70,33 @@ components:
 
     OrderResponse:
       allOf:
-        - $ref: '#/components/schemas/OrderRequest'
+        - $ref: '#/components/schemas/PaymentRequest'
         - type: object
           properties:
             feeId:
               type: integer
               format: int32
               readOnly: true
+    Transaction200Response:
+      type: object
+      properties:
+        referenceNumber:
+          type: integer
+          format: int32
+        status:
+          type: string
+      required:
+        - referenceNumber
+        - status
+
 
   responses:
+    Transaction200Response:
+      description: Transaction performed sucessfully.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Transaction200Response'
     Generic404Response:
       description: The requested resource was not found.
       content:
